--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 MouseInfo==0.1.3
 numpy==1.24.0
-opencv-python==4.6.0.66
+opencv-contrib-python-headless==4.6.0.66
 Pillow==9.3.0
 psutil==5.9.1
 py4j==0.10.9.7
